--- a/bluesky_adaptive/tests/docker-compose.yml
+++ b/bluesky_adaptive/tests/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 'zookeeper_data:/bitnami'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+    networks:
+      - re_manager
 
   kafka:
     image: 'docker.io/bitnami/kafka:latest'
@@ -26,6 +28,8 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
     depends_on:
       - zookeeper
+    networks:
+      - re_manager
 
   mongodb:
     image: 'docker.io/library/mongo:latest'
@@ -33,6 +37,37 @@ services:
       - '27017:27017'
     volumes:
       - '/tmp/databroker:/data/db'
+
+  redis:
+    image: redis:6.2-alpine
+    ports:
+      - 6379:6379
+    networks:
+      - re_manager
+  qserver:
+    image: qserver:latest
+    environment:
+      - REDIS_ADDR=redis:6379
+    networks:
+      - re_manager
+    ports:
+      - 60615:60615
+    depends_on:
+      - redis
+
+  httpserver:
+    image: http-server:latest
+    ports:
+      - 60610:60610
+    environment:
+      - QSERVER_ZMQ_CONTROL_ADDRESS=tcp://qserver:60615
+      - QSERVER_ZMQ_INFO_ADDRESS=tcp://qserver:60625
+    networks:
+      - re_manager
+
+networks:
+  re_manager:
+    driver: bridge
 
 volumes:
   zookeeper_data:
