--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   redis:
-    image: redis:6.2-alpine
+    image: docker.io/redis:6.2-alpine
     ports:
       - 6379:6379
     networks:
