--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ exclude = '''
   # The following are specific to Black, you probably don't want those.
   | blib2to3
   | tests/data
+  | versioneer
 )/
 '''
