--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         docker build -t http-server:latest docker/http-server
 
     - name: Start docker containers
-      run: docker-compose -f docker/docker-compose.yml up -d
+      run: docker-compose -f bluesky_adaptive/tests/docker-compose.yml up -d
 
     - name: is Kafka running?
       run: docker ps -a
@@ -45,6 +45,8 @@ jobs:
         pip install -r requirements-dev.txt
         pip install -r requirements-agents.txt
         pip list
+        mkdir -p /etc/tiled/profiles
+        cp bluesky_adaptive/tests/tiled_client_config.yml /etc/tiled/profiles/
 
     - name: Test with pytest
       shell: bash -l {0}
