--- a/bluesky_adaptive/tests/docker-compose.yml
+++ b/bluesky_adaptive/tests/docker-compose.yml
@@ -18,16 +18,14 @@ services:
     container_name: kafka
     ports:
       - '9092:9092'
-      - '29092:29092'
     volumes:
       - 'kafka_data:/bitnami'
     environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://kafka:9092
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
     depends_on:
       - zookeeper
     networks:
@@ -42,8 +40,9 @@ services:
       - '/tmp/databroker:/data/db'
     networks:
       - re_manager
+
   redis:
-    image: redis:6.2-alpine
+    image: docker.io/redis:6.2-alpine
     ports:
       - 6379:6379
     networks:
@@ -61,6 +60,7 @@ services:
 
   httpserver:
     image: http-server:latest
+    container_name: httpserver
     ports:
       - 60610:60610
     environment:
