--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,7 +45,7 @@ jobs:
 
 
     - name: Deploy documentation to blueskyproject.io.
-      if: github.repository_owner == 'bluesky' && github.ref_name == 'master'
+      if: github.repository_owner == 'bluesky' && github.ref_name == 'main'
       # We pin to the SHA, not the tag, for security reasons.
       # https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/security-hardening-for-github-actions#using-third-party-actions
       uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501 # v3.7.3
