fix: display needs and security of xhost - add: bash file to set local display conditionally on mac/linux - Move entrypoint command to CMD - Update README

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     environment:
       - QSERVER_ZMQ_CONTROL_ADDRESS=tcp://qserver:60615
       - QSERVER_ZMQ_INFO_ADDRESS=tcp://qserver:60625
-      - DISPLAY=${LOCAL_DISPLAY_IP}:0
+      - DISPLAY=${LOCAL_DISPLAY}
     networks:
       - qserver_network
     volumes:
