--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,4 +21,4 @@ ophyd
 scipy
 pre-commit
 pytest-docker==1.0.1
-git+https://github.com/bluesky/databroker.git@v2.0.0b13#egg=databroker
+databroker @ git+https://github.com/bluesky/databroker.git@v2.0.0b13#egg=databroker
