--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: 23.12.1
     hooks:
       - id: black
+        exclude: versioneer.py
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
