--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -18,4 +18,4 @@ jobs:
           pip install black
       - name: Run black
         run: |
-          black . --check --verbose
+          black . --check --verbose --diff
