--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,9 +1,9 @@
 name: Check Code Style - BLACK
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  lint:
+  lint-black:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,4 +18,4 @@ jobs:
           pip install black
       - name: Run black
         run: |
-          black . --check
+          black . --check --verbose --diff
