--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,22 +3,62 @@ name: tests
 on:
   push:
   pull_request:
+    branches:
+      - main
+  workflow_dispatch:
   schedule:
-      - cron: '00 4 * * *'  # daily at 4AM
+      - cron: '0 0 * * 0'  # weekly
 
 jobs:
-  build:
+  unit-tests:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.9"] # TODO: expand versions
 
       fail-fast: false
     steps:
 
     - uses: actions/checkout@v4
+
+    # TODO (maffettone): Change host after CD into bluesky/bluesky-pods
+    - name: Download and build bluesky-pods
+      run: |
+        docker pull ghcr.io/maffettone/bluesky-pods-bluesky:latest
+        docker tag ghcr.io/maffettone/bluesky-pods-bluesky:latest bluesky:latest
+
+    - name: Start Bluesky containers
+      run: |
+        pushd bluesky_adaptive/tests/podman
+        docker-compose up -d
+        popd
+
+    - name: Log for are containers running?
+      run: docker ps -a
+
+    - name: Check container status and fetch logs if any failed
+      run: |
+        failed_containers=()
+        while read -r container; do
+          status=$(docker inspect --format='{{.State.Status}}' "$container")
+          if [ "$status" != "running" ]; then
+            echo "::error ::Container $container has status $status"
+            failed_containers+=("$container")
+          fi
+        done < <(docker ps -aq)
+
+        for container in "${failed_containers[@]}"; do
+          echo "Logs for $container:"
+          docker logs "$container"
+        done
+        
+        if [ ${#failed_containers[@]} -ne 0 ]; then
+          echo "::error ::Some containers failed to start"
+          docker ps -a
+          exit 1
+        fi
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -32,7 +72,18 @@ jobs:
         pip install --upgrade pip wheel
         pip install .
         pip install -r requirements-dev.txt
+        pip install -r requirements-agents.txt
+        mkdir -p /home/runner/.config/tiled/profiles
+        cp ./bluesky_adaptive/tests/podman/tiled_client_config.yml /home/runner/.config/tiled/profiles/tiled_client_config.yml
         pip list
+
+    - name: Reload Permissions for QServer (Not necessary, but helpful)
+      shell: bash -l {0}
+      run: |
+        set -vxeuo pipefail
+        qserver environment open
+        qserver permissions reload
+
 
     - name: Test with pytest
       shell: bash -l {0}
