--- a/bluesky_adaptive/tests/podman/docker-compose.yml
+++ b/bluesky_adaptive/tests/podman/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://127.0.0.1:9092
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
     depends_on:
       - zookeeper
@@ -32,38 +32,48 @@ services:
       - re_manager
 
   mongodb:
-    image: 'docker.io/library/mongo:latest'
+    image: docker.io/library/mongo:latest
     ports:
-      - '27017:27017'
+      - 27017:27017
     volumes:
-      - '/tmp/databroker:/data/db'
+      - mongo:/data/db
 
   redis:
     image: redis:6.2-alpine
-    ports:
-      - 6379:6379
     networks:
       - re_manager
   qserver:
-    image: qserver:latest
-    environment:
-      - REDIS_ADDR=redis:6379
+    image: bluesky
+    command: start-re-manager --redis-addr redis:6379
+    volumes:
+      - ./16-plans.py:/usr/local/lib/python3.12/site-packages/bluesky_queueserver/profile_collection_sim/16-plans.py
+      - ./16-plans.py:/usr/local/lib/python3.11/site-packages/bluesky_queueserver/profile_collection_sim/16-plans.py
+      - ./16-plans.py:/usr/local/lib/python3.10/site-packages/bluesky_queueserver/profile_collection_sim/16-plans.py
+      - ./16-plans.py:/usr/local/lib/python3.9/site-packages/bluesky_queueserver/profile_collection_sim/16-plans.py
     networks:
       - re_manager
     ports:
       - 60615:60615
     depends_on:
-      - redis
+      redis:
+        condition: service_started
+      kafka:
+        condition: service_started
 
   httpserver:
-    image: http-server:latest
+    image: bluesky
+    command: uvicorn bluesky_httpserver.server:app --host httpserver --port 60610
     ports:
       - 60610:60610
     environment:
       - QSERVER_ZMQ_CONTROL_ADDRESS=tcp://qserver:60615
       - QSERVER_ZMQ_INFO_ADDRESS=tcp://qserver:60625
+      - QSERVER_HTTP_SERVER_SINGLE_USER_API_KEY=SECRET
     networks:
       - re_manager
+    depends_on:
+      qserver:
+        condition: service_started
 
 networks:
   re_manager:
@@ -73,4 +83,6 @@ volumes:
   zookeeper_data:
     driver: local
   kafka_data:
+    driver: local
+  mongo:
     driver: local
