--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,7 @@ jobs:
 
         pip install .
         pip install -r requirements-dev.txt
+        pip install -r requirements-agents.txt
         pip list
 
     - name: Build Docs
