--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,15 +35,14 @@ jobs:
       run: |
         make -C docs/ html
 
-    - name: Upload built docs as artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: docs
-        path: build
-
     - name: Set env.REPOSITORY_NAME # just the repo, as opposed to org/repo
       run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
+    - name: Upload built docs as artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: ${{ env.REPOSITORY_NAME }}-docs
+        path: docs/build/html
 
     - name: Deploy documentation to blueskyproject.io.
       if: github.repository_owner == 'bluesky' && github.ref_name == 'main'
