tst: check if coverage is causing seg fault in ci/cd

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,5 +88,4 @@ jobs:
       shell: bash -l {0}
       run: |
         set -vxeuo pipefail
-        coverage run -m pytest -s -v
-        coverage report
+        pytest -s -v
