--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -87,12 +87,5 @@ jobs:
       shell: bash -l {0}
       run: |
         set -vxeuo pipefail
-        sudo apt-get update && sudo apt-get install -y gdb
-        ulimit -c unlimited
-        gdb --batch -ex "run" -ex "bt" --args python -m coverage run -m pytest -v
+        coverage run -m pytest -v
         coverage report
-
-    - uses: actions/upload-artifact@master # capture all crashes as build artifacts
-      with:
-        name: crashes
-        path: /cores
