--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,23 +14,14 @@ sphinx-copybutton
 sphinx-design
 pydata-sphinx-theme
 myst-parser
-
 fastapi
 caproto
-
-bluesky
-databroker
 ophyd
 scipy
 pre-commit
-databroker @ git+https://github.com/bluesky/databroker.git@v2.0.0b41#egg=databroker
+intake
 # This is required for the `tiled` package to make a Mongo client (some components from tiled[server]).
-asgi_correlation_id
-python-jose[cryptography]
-sqlalchemy[asyncio] >=2
-pydantic-settings >=2, <3
-jmespath
-openpyxl
-cachetools
-pymongo
-prometheus_client
+tiled[server]
+humanize
+doct
+mongomock
