--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ tiled[client]
 numpy
 pydantic
 
-databroker @ git+https://github.com/bluesky/databroker.git@v2.0.0b41#egg=databroker
+databroker @ git+https://github.com/bluesky/databroker.git@v2.0.0b56#egg=databroker
+bluesky-tiled-plugins
+json-rpc
