--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -25,3 +25,5 @@ tiled[server]
 humanize
 doct
 mongomock
+databroker @ git+https://github.com/bluesky/databroker.git@v2.0.0b56#egg=databroker
+bluesky-tiled-plugins
