--- a/bluesky_adaptive/tests/podman/docker-compose.yml
+++ b/bluesky_adaptive/tests/podman/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.2'
 
 services:
-  zookeeper:
-    image: 'docker.io/bitnami/zookeeper:latest'
-    ports:
-      - '2181:2181'
-    volumes:
-      - 'zookeeper_data:/bitnami'
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    networks:
-      - re_manager
-
   kafka:
     image: 'docker.io/bitnami/kafka:latest'
     ports:
@@ -20,14 +9,16 @@ services:
     volumes:
       - 'kafka_data:/bitnami'
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
+      - KAFKA_CFG_KRAFT_MODE_ENABLED=true
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:29092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://127.0.0.1:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
-    depends_on:
-      - zookeeper
+      - ALLOW_PLAINTEXT_LISTENER=yes
     networks:
       - re_manager
 
