--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,6 +29,7 @@ jobs:
           pip install .
           pip install -r requirements-dev.txt
           pip install -r requirements-agents.txt
+          pip install -r requirements-tsuchinoko.txt
           pip list
 
       - name: Build Docs
