--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip setuptools numpy
+          python -m pip install --upgrade pip ruff pre-commit
           pip install pre-commit
       - name: Run Pre-Commit
         run: pre-commit run --all-files --show-diff-on-failure
