--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
       fail-fast: false
 
@@ -48,9 +48,7 @@ jobs:
         run: |
           set -vxeuo pipefail
           pip install --upgrade pip wheel
-          pip install .
-          pip install -r requirements-dev.txt
-          pip install -r requirements-agents.txt
+          pip install .[dev,agents]
           mkdir -p /home/runner/.config/tiled/profiles
           cp ./bluesky_adaptive/tests/podman/tiled_client_config.yml /home/runner/.config/tiled/profiles/tiled_client_config.yml
           pip list
