--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Docker Compose
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker-compose freeglut3-dev
+          sudo apt-get install -y docker-compose freeglut3-dev libopenblas-dev
 
       - name: Download and build bluesky-pods
         run: |
