--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ dev = [
   "databroker[all]>=2.0.0b1,<3.0.0",
   "bluesky-tiled-plugins",
 ]
-tsuchinoko = ["tsuchinoko"]
+tsuchinoko = ["tsuchinoko>=1.1.23"]
 
 [project.urls]
 GitHub = "https://github.com/bluesky/bluesky-adaptive"
