maint: expand coverage omitted files for pyside6

--- a/coverage.ini
+++ b/coverage.ini
@@ -1,3 +1,6 @@
-[run]
-omit =
-    */shibokensupport/*
+[tool.coverage.report]
+omit = [
+    "shibokensupport/*",
+    "pyscript",
+    "signature_bootstrap.py",
+]
