--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -90,4 +90,4 @@ jobs:
         run: |
           set -vxeuo pipefail
           coverage run -m pytest -v
-          coverage report
+          coverage report -i
