Add Tsuchinoko agent (#49)
* add: tsuchinoko agent, tsuchinoko dep

* add: tsuchinoko test (WIP)

* add: tsuchinoko fixtures

* fix yv unpacking; suggest/ingest; targets->candidate; move state filtering upstream;

* remove unused fixtures; capture tsuchinoko thread errors

* maint: black

* maint: flake8

* maint: isort

* fix: install tsuchinoko deps in tests and docs workflows

* fix: install gl provider in tests workflow

* maint: ruff fixes

* fix: move tsuchinoko dep into pyproject.toml

* fix: delete empty files from merge

* fix: add openblas provider

* pin minimum tsuchinoko

* maint: omit shiboken dynamic source coverage

* maint: suppress gpcam tests on python<3.11

* maint: expand coverage omitted files for pyside6

* maint: have coverage ignore missing files

* doc: add tsuchinoko agent docs

* maint: reorder imports

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Docker Compose
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker-compose
+          sudo apt-get install -y docker-compose freeglut3-dev libopenblas-dev
 
       - name: Download and build bluesky-pods
         run: |
@@ -48,7 +48,7 @@ jobs:
         run: |
           set -vxeuo pipefail
           pip install --upgrade pip wheel
-          pip install .[dev,agents]
+          pip install .[dev,agents,tsuchinoko]
           mkdir -p /home/runner/.config/tiled/profiles
           cp ./bluesky_adaptive/tests/podman/tiled_client_config.yml /home/runner/.config/tiled/profiles/tiled_client_config.yml
           pip list
@@ -90,4 +90,4 @@ jobs:
         run: |
           set -vxeuo pipefail
           coverage run -m pytest -v
-          coverage report
+          coverage report -i
